Create a temp blob container